--- a/Flixster/Base.lproj/Main.storyboard
+++ b/Flixster/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nH0-lt-n34">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AVG-d1-r1d">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -69,7 +69,41 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="980" y="38.23088455772114"/>
+            <point key="canvasLocation" x="-234" y="132"/>
+        </scene>
+        <!--Superhero-->
+        <scene sceneID="byh-Ap-oRm">
+            <objects>
+                <viewController id="VUY-rV-rP4" customClass="MovieGridViewController" customModule="Flixster" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="U9S-W3-BSp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Jon-nS-7Ig"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Superhero" id="2rX-Oj-ZwA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hNw-qo-79S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="942" y="132"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="b4w-rB-27w">
+            <objects>
+                <tabBarController id="AVG-d1-r1d" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="woQ-Wp-34V">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="nH0-lt-n34" kind="relationship" relationship="viewControllers" id="oBL-sY-pUG"/>
+                        <segue destination="vT4-yD-Dwy" kind="relationship" relationship="viewControllers" id="XWh-6P-Wu7"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cuW-uc-tU3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="663" y="-1436"/>
         </scene>
         <!--Movie Details View Controller-->
         <scene sceneID="6O9-md-tr6">
@@ -115,12 +149,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mTm-Zw-He4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1748" y="37.331334332833585"/>
+            <point key="canvasLocation" x="-234" y="807"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Now Playing-->
         <scene sceneID="Qza-sg-YPJ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nH0-lt-n34" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Now Playing" id="igk-xb-nRE"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="m0F-fg-JFb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -134,6 +169,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L4v-OC-ioR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-234.40000000000001" y="-659.82008995502258"/>
+        </scene>
+        <!--Superhero-->
+        <scene sceneID="cfi-b3-l8w">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vT4-yD-Dwy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Superhero" id="oZd-4n-J0a"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HOL-Zw-nyO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VUY-rV-rP4" kind="relationship" relationship="rootViewController" id="NeY-TM-Hkw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FdF-5m-CuM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="941.60000000000002" y="-660.71964017991013"/>
         </scene>
     </scenes>
 </document>
